# Dinosaur

./: .gitignore  README.md
.github/workflows/: release.yml
app/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
app/.cargo/: config.toml
app/src/: format.rs  index.rs  main.rs
docs/: index.html  styles.css
installer/: Dinosaur.iss
scripts/: gen_csv.py  package.ps1
