[package]
name = "bigfile_viewer"
version = "0.1.0"
edition = "2021"
description = "A viewer for very large CSV / JSON / TXT files (handles 50GB+ smoothly)"

[[bin]]
name = "Dinosaur"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui_extras = { version = "0.29", features = ["svg"] }
memmap2 = "0.9"
memchr = "2.7"
rayon = "1.10"
rfd = "0.15"
anyhow = "1"
csv = "1.3"
serde_json = "1"
resvg = "0.42"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
